...
                        modifier = Modifier.clickable {
                            passwordVisibility = !passwordVisibility
                        }
                    )
                },
                placeholder = {
                    Text("Password")
                },
                value = password,
                onValueChange = { input ->
                    password = input
                }
            )
...
